--- a/devfile.yaml
+++ b/devfile.yaml
@@ -27,6 +27,7 @@ components:
 commands:
   - exec:
       commandLine: mvn clean install
+      workingDir: '${PROJECT_SOURCE}'
       component: tools
       group:
         isDefault: true
@@ -34,6 +35,7 @@ commands:
     id: maven-build
   - exec:
       commandLine: java -jar target/*.jar
+      workingDir: '${PROJECT_SOURCE}'
       component: tools
       group:
         isDefault: true
@@ -41,6 +43,7 @@ commands:
     id: run-with-hsqldb
   - exec:
       commandLine: 'java -jar -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005 target/*.jar'
+      workingDir: '${PROJECT_SOURCE}'
       component: tools
       group:
         kind: run
