--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,6 +5,7 @@
       "redhat.java",
       "vscjava.vscode-java-debug",
       "vscjava.vscode-java-test",
-      "redhat.vscode-yaml"
+      "redhat.vscode-yaml",
+      "redhat.vscode-openshift-connector"
     ]
 }
